force-app/main/default/objects/Feature_Flag__mdt/Feature_Flag__mdt.object-meta.xml
<CustomObject>
    <label>Feature Flag</label>
    <pluralLabel>Feature Flags</pluralLabel>
    <description>Custom Metadata Type for controlling feature rollouts without code deployment</description>
</CustomObject>