force-app/main/default/objects/Feature_Flag__mdt/fields/Rollout_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentage of users who should see this feature (0-100)</description>
    <label>Rollout Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>